// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should render closed menu 1`] = `
.c3 {
  color: rgb(90, 94, 0);
  text-decoration: none;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.c3 :hover,
.c3 :active,
.c3 :focus {
  text-decoration: underline;
}

.c5 {
  color: rgb(248, 207, 169);
  font-size: 1.75rem;
  line-height: 2.25rem;
  font-family: "Krana Fat";
}

.c6 {
  color: rgb(248, 207, 169);
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "IBM Plex Sans";
}

.c1 {
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  margin-right: 1.75rem;
}

.c2 {
  background: rgb(0, 98, 114);
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 2.5rem;
  top: 3.75rem;
  width: 100vw;
  overflow: hidden;
  transition: height 0.3s ease-in-out;
  height: 0;
}

.c2 .c4 {
  transition: opacity 0.3s ease-in-out;
}

.c2 .c4 {
  opacity: 0;
}

.c7 {
  display: none;
}

.c0 {
  background-color: rgb(0, 98, 114);
  display: flex;
  flex-direction: row;
  box-sizing: border-box;
  height: 3.75rem;
  width: 100%;
  position: fixed;
  z-index: 50;
  user-select: none;
}

@media (min-width: 1200px) {
  .c1 {
    display: none;
  }
}

@media (min-width: 1200px) {
  .c2 {
    display: none;
  }
}

@media (min-width: 1200px) {
  .c7 {
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 2.5rem;
  }
}

<header
  class="c0"
>
  <div
    class="c1"
  >
    <div
      aria-expanded="false"
      aria-label="Avaa valikko"
      class="hamburger-react"
      role="button"
      style="cursor: pointer; height: 48px; position: relative; transition: 0.3s ease-in-out; user-select: none; width: 48px; outline: none;"
      tabindex="0"
    >
      <div
        style="transition: 0.15s ease-in-out 0.15s; transform: none;"
      >
        <div
          style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 12px; transition: 0.15s ease-in-out 0s; transform: none;"
        />
      </div>
      <div
        style="transition: 0.15s ease-in-out; opacity: 1;"
      >
        <div
          style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 23px; transition: 0.15s ease-in-out;"
        />
      </div>
      <div
        style="transition: 0.15s ease-in-out 0.15s; transform: none;"
      >
        <div
          style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 34px; transition: 0.15s ease-in-out 0s; transform: none;"
        />
      </div>
    </div>
  </div>
  <div
    class="c2"
  >
    <a
      class="c3 c4 c5"
      href="/"
    >
      Lauri Lavanti
    </a>
    <a
      class="c3 c4 c6"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="c3 c4 c6"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="c3 c4 c6"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </div>
  <div
    class="c7"
  >
    <a
      class="c3 c4 c5"
      href="/"
    >
      Lauri Lavanti
    </a>
  </div>
  <div
    class="c7"
  >
    <a
      class="c3 c4 c6"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="c3 c4 c6"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="c3 c4 c6"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </div>
</header>
`;

exports[`<Header /> should render open 1`] = `
.c3 {
  color: rgb(90, 94, 0);
  text-decoration: none;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.c3 :hover,
.c3 :active,
.c3 :focus {
  text-decoration: underline;
}

.c5 {
  color: rgb(248, 207, 169);
  font-size: 1.75rem;
  line-height: 2.25rem;
  font-family: "Krana Fat";
}

.c6 {
  color: rgb(248, 207, 169);
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "IBM Plex Sans";
}

.c1 {
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  margin-right: 1.75rem;
}

.c8 .c4 {
  transition: opacity 0.3s ease-in-out;
}

.c8 .c4 {
  opacity: 0;
}

.c2 {
  background: rgb(0, 98, 114);
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 2.5rem;
  top: 3.75rem;
  width: 100vw;
  overflow: hidden;
  transition: height 0.3s ease-in-out;
  height: calc(100vh - 3.75rem);
}

.c2 .c4 {
  transition: opacity 0.3s ease-in-out;
}

.c2 .c4 {
  opacity: 100;
}

.c7 {
  display: none;
}

.c0 {
  background-color: rgb(0, 98, 114);
  display: flex;
  flex-direction: row;
  box-sizing: border-box;
  height: 3.75rem;
  width: 100%;
  position: fixed;
  z-index: 50;
  user-select: none;
}

@media (min-width: 1200px) {
  .c1 {
    display: none;
  }
}

@media (min-width: 1200px) {

}

@media (min-width: 1200px) {
  .c2 {
    display: none;
  }
}

@media (min-width: 1200px) {
  .c7 {
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 2.5rem;
  }
}

<header
  class="c0"
>
  <div
    class="c1"
  >
    <div
      aria-expanded="true"
      aria-label="Sulje valikko"
      class="hamburger-react"
      role="button"
      style="cursor: pointer; height: 48px; position: relative; transition: 0.3s ease-in-out; user-select: none; width: 48px; outline: none;"
      tabindex="0"
    >
      <div
        style="transition: 0.15s ease-in-out 0s; transform: translateY(11px);"
      >
        <div
          style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 12px; transition: 0.15s ease-in-out 0.15s; transform: rotate(45deg);"
        />
      </div>
      <div
        style="transition: 0.15s ease-in-out; opacity: 0;"
      >
        <div
          style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 23px; transition: 0.15s ease-in-out;"
        />
      </div>
      <div
        style="transition: 0.15s ease-in-out 0s; transform: translateY(-11px);"
      >
        <div
          style="background: rgb(248, 207, 169); height: 3px; left: 4px; position: absolute; width: 40px; top: 34px; transition: 0.15s ease-in-out 0.15s; transform: rotate(-45deg);"
        />
      </div>
    </div>
  </div>
  <div
    class="c2"
  >
    <a
      class="c3 c4 c5"
      href="/"
    >
      Lauri Lavanti
    </a>
    <a
      class="c3 c4 c6"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="c3 c4 c6"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="c3 c4 c6"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </div>
  <div
    class="c7"
  >
    <a
      class="c3 c4 c5"
      href="/"
    >
      Lauri Lavanti
    </a>
  </div>
  <div
    class="c7"
  >
    <a
      class="c3 c4 c6"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="c3 c4 c6"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="c3 c4 c6"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </div>
</header>
`;
